--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "scripts": {
     "start:frontend": "npm --prefix frontend start",
-    "start:backend": "npm --prefix backend start",
+    "start:backend": "python backend/app.py",
     "start": "npm run start:frontend",
+    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "install:all": "npm install --prefix frontend && npm install --prefix backend",
     "build:frontend": "npm --prefix frontend run build"
   },
   "workspaces": [
     "frontend",
     "backend"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^9.2.1"
+  }
 }
